[2.x] test: Add Git Bash test on Windows